--- a/memoria/memoria_tfg.tex
+++ b/memoria/memoria_tfg.tex
@@ -32,7 +32,7 @@
 % \usepackage{alltt}       % proporciona o entorno alltt, semellante a verbatim pero que respecta comandos
 % \usepackage{enumitem}    % permite personalizar os entornos de lista
 % \usepackage{eurofont}    % proporciona o comando \euro
-% \usepackage{float}       % permite máis opcións para controlar obxectos flotantes (táboas, figuras)
+  \usepackage{float}       % permite máis opcións para controlar obxectos flotantes (táboas, figuras)
 % \usepackage{hhline}      % permite personalizar as liñas horizontais en arrays e táboas
   \usepackage{longtable}   % permite construir táboas que ocupan máis dunha páxina
 % \usepackage{lscape}      % permite colocar partes do documento en orientación apaisada
@@ -103,6 +103,7 @@
 \appendixpage
 \include{anexos/detalles_implementacion}
 \include{anexos/diagramas_detallados}
+\include{anexos/capturas_aplicacion}
 
 \printglossary[type=\acronymtype,title=\nomeglosarioacronimos]
 \printglossary[title=\nomeglosariotermos]
